[build-system]
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5", # required for "no-local-version" scheme
]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
requires-python = ">=3.8"
dynamic = ["version", "dependencies", "optional-dependencies"]
name = "enrich"
description = "enrich"
readme = "README.md"
authors = [{ "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }]
maintainers = [
  { "name" = "Sorin Sbarnea", "email" = "sorin.sbarnea@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  # https://pypi.org/classifiers/
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
keywords = ["console", "logging", "rich"]


[project.urls]
homepage = "https://github.com/pycontribs/enrich"
repository = "https://github.com/pycontribs/enrich"
changelog = "https://github.com/pycontribs/enrich/releases"


[tool.isort]
profile = "black"
known_first_party = "subprocess_tee"

[tool.mypy]
python_version = 3.8
color_output = true
error_summary = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest]
addopts = "--doctest-modules --durations 10 --durations-min=3 --color=yes"
doctest_optionflags = ["ALLOW_UNICODE", "ELLIPSIS"]
norecursedirs = "dist doc build .tox .eggs"
filterwarnings = [
  # treat warnings as errors unless we add them below
  "error"
  # ignore::UserWarning
]

[tool.ruff]
target-version = "py38"
# Same as Black.
line-length = 88

lint.ignore = [
  "D203", # incompatible with D211
  "D213", # incompatible with D212
  "E501", # we use black
  "ANN",
  "FBT001",
  "FBT002",
  "FBT003",
  "PGH",
]
lint.select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["D", "ERA", "S"]

[tool.setuptools.dynamic]
dependencies = { file = [".config/requirements.in"] }
optional-dependencies.test = { file = [".config/requirements-test.in"] }

[tool.setuptools_scm]
local_scheme = "no-local-version"
tag_regex = "^(?P<prefix>v)?(?P<version>[0-9.]+)(?P<suffix>.*)?$"
write_to = "src/enrich/_version.py"
# To prevent accidental pick of mobile version tags such 'v6'
git_describe_command = [
  "git",
  "describe",
  "--dirty",
  "--tags",
  "--long",
  "--match",
  "v*.*",
]
